# hahaha

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  flake.nix  job.yaml
.github/: dependabot.yml
.github/workflows/: build.yaml  build_and_push_chart.yaml  build_and_push_image.yaml  job.yaml  main.yaml  naisjob-without-schedule.yaml  naisjob.yaml
.nais/: alert.yaml  clusterrole.yaml  clusterrolebinding.yaml  hahaha.yaml  networkpolicy.yaml
charts/: Chart.yaml  Feature.yaml  values.yaml
charts/hahaha/: Chart.yaml  values.yaml
charts/hahaha/templates/: _helpers.tpl  alert.yaml  application.yaml  clusterrole.yaml  clusterrolebinding.yaml
charts/templates/: application.yaml  networkpolicy.yaml
src/: actions.rs  api.rs  container.rs  events.rs  main.rs  pod.rs  prometheus.rs  reconciler.rs
src/haha/: api.rs  mod.rs
src/haha/pod/: app_pod.rs  containers.rs  handleable.rs  mod.rs
test-specs/: job.yaml  naisjob-without-schedule.yaml  naisjob.yaml
