[package]
name = "hahaha"
version = "0.4.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
kube = { version = "0.69.1", features = ["runtime","derive","ws"] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_20"] }
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# simpler error handling
anyhow = "1.0"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

async-trait = "0.1.52"

# portforward client and prometheus serving
hyper = { version = "0.14", features = ["server", "runtime"] }

# prometheus metrics
lazy_static = "1.4.0"
prometheus = "0.13.0"

hostname = "^0.3"