[package]
name = "hahaha"
version = "0.5.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "0.74.0", features = ["client","runtime","derive","ws"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mockall = "0.11"

# simpler error handling
anyhow = "1"
thiserror = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

async-trait = "0.1"

# portforward client and prometheus serving
hyper = { version = "0.14", features = ["server", "runtime"] }
tower = "0.4"

# prometheus metrics
lazy_static = "1.4"
prometheus = "0.13"

hostname = "^0.3"